@@ -5,7 +5,7 @@ link:../CONTRIBUTING.md#contributing-to-the-standard-library[].
 
 Note: All paths are given relative to the root of the repository.
 
-First, build the compiler. Run `./configure`, then `make world.opt`. See
+First, build the compiler. Run `./configure`, then `make`. See
 link:../HACKING.adoc[].
 
 To add a new module, you must:
@@ -30,7 +30,7 @@ To add a new module, you must:
 * Run `make alldepend` to update all the `.depend` files. These files are not
   edited by hand.
 
-* Run `make clean` or `make partialclean`, then `make world.opt`.
+* Run `make clean` or `make partialclean`, then `make`.
 
 If you are adding multiple modules, follow the steps above and rebuild the
 compiler after adding each module. If you add multiple modules before
