@@ -229,10 +229,10 @@ fi
 eval ./configure "$CCOMP" $build $host --prefix='$instdir' $confoptions
 
 if $make_native; then
-  $make $jobs --warn-undefined-variables world.opt
+  $make $jobs --warn-undefined-variables
   if $check_make_alldepend; then $make --warn-undefined-variables alldepend; fi
 else
-  $make $jobs --warn-undefined-variables world
+  $make $jobs --warn-undefined-variables
 fi
 if $dorebase; then
     # temporary solution to the cygwin fork problem
